tests/ui/type-alias-impl-trait/coherence_generalization.stderr
error[E0207]: the type parameter `U` is not constrained by the impl trait, self type, or predicates
  --> $DIR/coherence_generalization.rs:12:6
   |
LL | impl<U, V> Trait for (Opaque<U>, V, i32, V) {}
   |      ^ unconstrained type parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0207`.
